tests/baselines/reference/parseInvalidNullableTypes.errors.txt
tests/cases/compiler/parseInvalidNullableTypes.ts(1,30): error TS17019: Adding a postfix '?' to the end of a type is not valid TypeScript syntax. Did you mean to write 'string | undefined'?
tests/cases/compiler/parseInvalidNullableTypes.ts(5,30): error TS17020: Adding a prefix '?' to the start of a type is not valid TypeScript syntax. Did you mean to write 'string'?
tests/cases/compiler/parseInvalidNullableTypes.ts(9,16): error TS17019: Adding a postfix '?' to the end of a type is not valid TypeScript syntax. Did you mean to write 'string | undefined'?
tests/cases/compiler/parseInvalidNullableTypes.ts(10,16): error TS17019: Adding a postfix '?' to the end of a type is not valid TypeScript syntax. Did you mean to write 'number | undefined'?
tests/cases/compiler/parseInvalidNullableTypes.ts(12,16): error TS17020: Adding a prefix '?' to the start of a type is not valid TypeScript syntax. Did you mean to write 'string'?
tests/cases/compiler/parseInvalidNullableTypes.ts(13,16): error TS17020: Adding a prefix '?' to the start of a type is not valid TypeScript syntax. Did you mean to write 'number'?
tests/cases/compiler/parseInvalidNullableTypes.ts(15,16): error TS17019: Adding a postfix '?' to the end of a type is not valid TypeScript syntax. Did you mean to write 'any'?
tests/cases/compiler/parseInvalidNullableTypes.ts(16,10): error TS17019: Adding a postfix '?' to the end of a type is not valid TypeScript syntax. Did you mean to write 'number | undefined'?
tests/cases/compiler/parseInvalidNullableTypes.ts(18,16): error TS17020: Adding a prefix '?' to the start of a type is not valid TypeScript syntax. Did you mean to write 'any'?
tests/cases/compiler/parseInvalidNullableTypes.ts(19,10): error TS17020: Adding a prefix '?' to the start of a type is not valid TypeScript syntax. Did you mean to write 'number'?
tests/cases/compiler/parseInvalidNullableTypes.ts(21,10): error TS17019: Adding a postfix '?' to the end of a type is not valid TypeScript syntax. Did you mean to write 'unknown'?
tests/cases/compiler/parseInvalidNullableTypes.ts(22,10): error TS17019: Adding a postfix '?' to the end of a type is not valid TypeScript syntax. Did you mean to write 'never'?
tests/cases/compiler/parseInvalidNullableTypes.ts(23,10): error TS17019: Adding a postfix '?' to the end of a type is not valid TypeScript syntax. Did you mean to write 'void'?
tests/cases/compiler/parseInvalidNullableTypes.ts(24,10): error TS17019: Adding a postfix '?' to the end of a type is not valid TypeScript syntax. Did you mean to write 'undefined'?


==== tests/cases/compiler/parseInvalidNullableTypes.ts (14 errors) ====
    function f1(a: string): a is string? {
                                 ~~~~~~~
!!! error TS17019: Adding a postfix '?' to the end of a type is not valid TypeScript syntax. Did you mean to write 'string | undefined'?
        return true;
    }
    
    function f2(a: string): a is ?string {
                                 ~~~~~~~
!!! error TS17020: Adding a prefix '?' to the start of a type is not valid TypeScript syntax. Did you mean to write 'string'?
        return true;
    }
    
    function f3(a: string?) {}
                   ~~~~~~~
!!! error TS17019: Adding a postfix '?' to the end of a type is not valid TypeScript syntax. Did you mean to write 'string | undefined'?
    function f4(a: number?) {}
                   ~~~~~~~
!!! error TS17019: Adding a postfix '?' to the end of a type is not valid TypeScript syntax. Did you mean to write 'number | undefined'?
    
    function f5(a: ?string) {}
                   ~~~~~~~
!!! error TS17020: Adding a prefix '?' to the start of a type is not valid TypeScript syntax. Did you mean to write 'string'?
    function f6(a: ?number) {}
                   ~~~~~~~
!!! error TS17020: Adding a prefix '?' to the start of a type is not valid TypeScript syntax. Did you mean to write 'number'?
    
    const a = 1 as any?;
                   ~~~~
!!! error TS17019: Adding a postfix '?' to the end of a type is not valid TypeScript syntax. Did you mean to write 'any'?
    const b: number? = 1;
             ~~~~~~~
!!! error TS17019: Adding a postfix '?' to the end of a type is not valid TypeScript syntax. Did you mean to write 'number | undefined'?
    
    const c = 1 as ?any;
                   ~~~~
!!! error TS17020: Adding a prefix '?' to the start of a type is not valid TypeScript syntax. Did you mean to write 'any'?
    const d: ?number = 1;
             ~~~~~~~
!!! error TS17020: Adding a prefix '?' to the start of a type is not valid TypeScript syntax. Did you mean to write 'number'?
    
    const e: unknown?;
             ~~~~~~~~
!!! error TS17019: Adding a postfix '?' to the end of a type is not valid TypeScript syntax. Did you mean to write 'unknown'?
    const f: never?;
             ~~~~~~
!!! error TS17019: Adding a postfix '?' to the end of a type is not valid TypeScript syntax. Did you mean to write 'never'?
    const g: void?;
             ~~~~~
!!! error TS17019: Adding a postfix '?' to the end of a type is not valid TypeScript syntax. Did you mean to write 'void'?
    const h: undefined?;
             ~~~~~~~~~~
!!! error TS17019: Adding a postfix '?' to the end of a type is not valid TypeScript syntax. Did you mean to write 'undefined'?
    